<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SilaElPolja"
    android:background="@color/grey"
    >


    <TextView
        android:id="@+id/Naboj1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:text="@string/unosNaboja1"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="500dp"/>

    <EditText
        android:id="@+id/Naboj1Unos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/Naboj1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Naboj1"
        app:layout_constraintTop_toTopOf="@+id/Naboj1"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/Naboj2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unosNaboja2"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Naboj1"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="470dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/Naboj2Unos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/Naboj2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Naboj2"
        app:layout_constraintTop_toTopOf="@+id/Naboj2"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="10dp"/>


    <TextView
        android:id="@+id/Udaljenost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="400dp"
        android:text="@string/unosUdaljenosti"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Naboj2" />

    <EditText
        android:id="@+id/UdaljenostUnos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="25sp"
        android:textColor="@color/whiteShade"
        app:layout_constraintBottom_toBottomOf="@+id/Udaljenost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Udaljenost"
        app:layout_constraintTop_toTopOf="@+id/Udaljenost"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/RezultatSila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rezultat"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Udaljenost"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="300dp"/>

    <EditText
        android:id="@+id/RezultatSilaIspis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteShade"
        android:textSize="25sp"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/RezultatSila"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RezultatSila"
        app:layout_constraintTop_toTopOf="@+id/RezultatSila"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/Izracunaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteShade"
        android:text="@string/izracunaj"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RezultatSila"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/Natrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteShade"
        android:text="@string/natrag"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Izracunaj" />


    





</androidx.constraintlayout.widget.ConstraintLayout>